# iot_arch_project1

./: README.md  backup.sql  commit_pico_files.zsh
RnD/Gabbemannen00/: updated_database.db
RnD/Gabbemannen00/pi_zero/db/: sensor_data.db
RnD/Gabbemannen00/pi_zero/scripts/: auto_client.py  (+2 more)
RnD/Gabbemannen00/pico_w/: IP_adress_check.py  LCD_ON_OFF.py  LCD_check.py  LCD_pacman.py  LCD_talking.py  MFRC522.py  RFID_blueblink.py  RFID_buzzer.py  RFID_buzzer_leds_lcd.py  RFID_check.py  SDcard.py  TCP_server.py  WIFI_manager.py  i2c_lcd.py  main.py
RnD/Que-ctrl/: README.md
RnD/Que-ctrl/Code/: Rfid reader
RnD/Que-ctrl/Wbbsida/: Jats-info.html  admin.html  dashboard.html  database.js  index-html  scripts.js  style.css
RnD/Rackhamn/arena/: arena.c  arena.h
RnD/Rackhamn/crc32/: README.md  crc32.h  crc32_poly_table.h  endian.h  main.c  reverse_bits.h  strings.txt
RnD/Rackhamn/http/: README.md  build.sh
RnD/Rackhamn/json_cpac/: README.md
RnD/Rackhamn/lcd_i2c_lib/: README.md
RnD/Rackhamn/mfrc522/: README.md  mfrc522.c  mfrc522.h  test.c
RnD/Rackhamn/old_http/: README.md
RnD/Rackhamn/payload_test/: parse_payload.c
RnD/Rackhamn/picoex/: picoex.c
RnD/stormtomten/pico_reader/: CMakeLists.txt
RnD/stormtomten/pico_reader/src/: CMakeLists.txt  config.h  main.c  mfrc522.c  mfrc522.h  network.c  network.h  secrets.h  test.c
RnD/stormtomten/tcp_backend/: CMakeLists.txt  README.md
RnD/stormtomten/tcp_backend/src/: main.c
RnD/stormtomten/tcp_backend/tests/: test.c  test.db
src/c/: README.md
src/python/: README.md
web/: README.md
web/rest_api/: README.md
(+47 files in other folders)
